================================================================================
- Version 0.3.5 - 27.12.2010
================================================================================
    - fix southpark
    - fix kino.to
    - fix archive hosters

================================================================================
- Version 0.3.4 - 08.11.2010
================================================================================
    - fix kino.to token (cookie)

================================================================================
- Version 0.3.3 - 05.11.2010
================================================================================
    - add kino.to functions
        - show favourite series, docus, movies
        - show latets entries
        - show news
        - set language by title
        - add info item
        - add thumbnail to movies, series, docus
        - add other hoster (flash / divx)

    - hoster:
        - archive

================================================================================
- Version 0.3.2 - 03.11.2010
================================================================================
    - fix mtv.de VideoCharts
    - add mtv.de WeeklyCharts

    - sites:
        - simpsons.to (serie stream)

    - hoster:
        - zshare
        - qip

================================================================================
- Version 0.3.1 - 01.11.2010
================================================================================
    - fix duckload pattern for movie2k
    - catch kino.de http error 502
    - add security-cookie to kino.to (cookiecheck)
    - add new hoster for movie2k

    - hoster:
        - moveshare
        - filestage
        - screen4u
        - checkThisVid

================================================================================
- Version 0.3.0 - 31.10.2010
================================================================================