@@ -1,11 +1,13 @@
 from resources.lib.handler.hosterHandler import cHosterHandler
+from resources.lib.handler.requestHandler import cRequestHandler
+from resources.lib.parser import cParser
 
 class cHoster:
     def getName(self):
         return 'SklyLoad.net'
 
     def getPattern(self):
-        return "so.addVariable\('file','([^']+)'"
+        return "<param name='src' value='(.*?)'";
 
     def setUrl(self, sUrl):
         self.__sUrl = sUrl
@@ -17,5 +19,21 @@ class cHoster:
         return self.__sUrl
 
     def getMediaLink(self):
-        oHosterHandler = cHosterHandler()
-        return oHosterHandler.getUrl(self)
+        oRequest = cRequestHandler(self.__sUrl)
+        sHtmlContent = oRequest.request()
+        sPattern = 'var targetURL="([^"]+)"'
+
+        oParser = cParser()
+        aResult = oParser.parse(sHtmlContent, sPattern)
+        print(aResult)
+        if (aResult[0] == True):
+            self.__sUrl = aResult[1][0]
+            print(self.__sUrl)
+
+            oHosterHandler = cHosterHandler()
+            return oHosterHandler.getUrl(self)
+
+        return False, aResult
+
+
+
